--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 150px;
+    
 }
 
 
@@ -31,8 +31,8 @@ body{
     width: 1100px;
     border-radius: 8px;
     background-color: var(--Dark-desaturated-blue-card-background);
-    border: 1px solid wheat;
     overflow: hidden;
+    margin-top: 150px;
 }
 
 .primera-seccion{
@@ -110,4 +110,50 @@ span{
     background-color: hsla(277, 76%, 32%, 0.674);
 }
 
+@media (max-width: 768px){
+    .main-container{
+        width: 375px;
+        flex-direction: column-reverse;
+        margin-top: 0;
+    }
 
+    .primera-seccion{
+        width: 100%;
+        padding: 40px;
+    }
+
+    .segunda-seccion{
+        width: 100%;
+    }
+
+    .img-desktop{
+        border-radius: 10px 10px 0 0;
+    }
+
+    .card-title{
+        text-align: center;
+        font-size: 1.9rem;
+        line-height: 35px;
+    }
+
+    .parrafo{
+        text-align: center;
+        font-size: .95rem;
+        width: 90%;
+        line-height: 25px;
+        margin-bottom: 30px;
+    }
+
+    .card-stats{
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        line-height: 15px;
+        gap: 30px;
+    }
+
+    .stats h2{
+        font-size: 1.2rem;
+    }
+    
+}
